<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Textbook Exchange</string>
    
    <string name="action_settings">Settings</string>
    <string name="author">Author (required, first author only)</string>
    <string name="authorSearch">Author</string>
    <string name="title">Title (required)</string>
    <string name="titleSearch">Title</string>
    <string name="edition">Edition (required)</string>
    <string name="editionSearch">Edition</string>
    <string name="isbn">ISBN</string>
    <string name="course">Course</string>
    <string name="professor">Professor</string>
    <string name="submitPost">Submit Post</string>
    <string name="askingPrice">Asking Price (required)</string>
    <string name="description">Description</string>
    <string name="welcome">Welcome to Textbook Exchange!</string>
    <string name="username">Username (required)</string>
    <string name="password">Password (required)</string>
    <string name="login">Log In</string>
    <string name="createAccount">Create Account</string>
    <string name="email">Email Address (required)</string>
    <string name="phone">Phone Number (optional)</string>
    <string name="selectSchool">Select School</string>
    <string name="postABook">Post A Book</string>
    <string name="logOut">Log Out</string>
    <string name="submit">Submit</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="takePhoto">Take Photo</string>
    <string name="addPhoto">Add Photo</string>
    <string name="searchABook">Search by Title, Author, etc.</string>
    <string name="searchACourse">Search by Course and Prof</string>
    <string name="sendEmail">Send Email to Seller</string>
    <string name="sendText">Send Text to Seller</string>
    <string name="call">Call Seller</string>
    <string name="addWantToBuy">Add to Want to Buy List</string>
    <string name="searchForABook">Search for a Book</string>
    <string name="viewPosts">View My Posts</string>
    <string name="deletePost">Delete Post</string>
    <string name="addWTB">Add Book to WTB List</string>
    <string name="viewWTB">View My WTB List</string>
    <string name="deleteWTB">Delete from WTB List</string>
    
    
    <string-array name = "schools_array">
        <item>Texas A&amp;M University - College Station</item>
        <item>Texas A&amp;M University - Commerce</item>
        <item>Texas A&amp;M University - Galveston</item>
        <item>University of Texas - Arlington</item>
        <item>University of Texas - Austin</item>
        <item>University of Texas - Dallas</item>
        <item>University of Texas - Tyler</item>
        <item>Texas Tech</item>
        <item>Texas State University</item>
        <item>Stephen F. Austin State University</item>
        <item>Sam Houston State University</item>
        <item>Southern Methodist University</item>
        <item>University of North Texas - Denton</item>
        <item>Texas Christian University</item>
        <item>Rice University</item>
        <item>University of Houston</item>
        
    </string-array>
    
    
    

</resources>
