<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextCreateUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint ="@string/username"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextCreatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint = "@string/password"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/editTextCreatePassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint = "@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Spinner
        android:id="@+id/spinnerSchool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt = "@string/selectSchool" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint = "@string/phone"
        android:inputType="phone" />

    <Button
        android:id="@+id/buttonCreateAccount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/createAccount" />

</LinearLayout>
