<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group1SEUTA.textbookexchange.PostActivity">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
         >

        
    </TextView>
    
    
    <TextView
        android:id="@+id/TextViewAuthor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        
    </TextView>
    
    <TextView
        android:id="@+id/TextViewEdition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

       
    </TextView>
    
    <TextView
        android:id="@+id/TextViewISBN"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >

        
    </TextView>

    <TextView
        android:id="@+id/TextViewSubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        
    </TextView>
    
    <TextView
        android:id="@+id/TextViewProfessor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        
    </TextView>

    <TextView
        android:id="@+id/TextViewPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView
        android:id="@+id/TextViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView
        android:id="@+id/TextViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView
        android:id="@+id/TextViewNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    <com.parse.ParseImageView
        android:id="@+id/result_preview_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp" />
    
    <Button
        android:id="@+id/buttonSendEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sendEmail" />
    
    <Button
        android:id="@+id/buttonSendText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sendText" />
    <Button
        android:id="@+id/buttonCall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/call" />
    
   <Button
        android:id="@+id/buttonAddInterested"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/addWantToBuy" />

</LinearLayout>
</ScrollView>